--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
 
 <Div id="contenidos">
 	<header>
-		<h1>LA CASA DEL SMART TV </h1>
-		<h2>REPARACION DE TELEVISORES DE ULTIMA GENERACION</h2>
+		                      <h1>LA CASA DEL SMART TV </h1>
+		                      
+		                      <h2>REPARACION DE TELEVISORES DE ULTIMA GENERACION</h2>
 	</header>
 
 <nav>
 	<ul class="menu">
-		<li><a href="http://www.lg.com/co" class="menu">Pag Oficial LG</a></li>
-		<li><a href="http://www.samsung.com/co/home/"class="menu">SAMSUNG OFICIAL</a></li>
-		<li><a href="http://www.ionparts.co/Inicio" class="menu">Repuestos y accesorios</a></li>
+		<li><a href="http://www.lg.com/co" target="_blanktarget="target="_blanktarget="target="_blanktarget="class="menu">Pag Oficial LG</a></li>
+		<li><a href="http://www.samsung.com/co/home/"target="_blanktarget="target="_blanktarget="class="menu">SAMSUNG OFICIAL</a></li>
+		<li><a href="http://www.ionparts.co/Inicio"target="_blanktarget=" class="menu">Repuestos y accesorios</a></li>
 
 	</ul>
 </nav>
